--- a/style.css
+++ b/style.css
@@ -90,8 +90,10 @@ section img {
 }
 .codeback {
     background: dimgray;
-    padding: 10px;
-    width: 65%;
+    padding: 3px 10px;
+    width: 85%;
+    margin-top: 5px;
+    font-size: 18px;
 }
 aside {
     padding: 30px 20px 10px;
