--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
     margin: auto;
     border:rgb(58, 57, 57) solid 1px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 header {
     display: flex;
@@ -24,6 +27,7 @@ header {
 h1 {
     font-size: 3em;
     position: relative;
+    text-align: center;
 }
 h1::after {
     content: "";
@@ -141,4 +145,77 @@ footer {
 .copy img {
     height: 40px;
     padding: 0 10px;
+}
+@media (max-width: 1315px) {
+    nav.links li a {
+        font-size: 16pt;
+    }
+    nav.links ul {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+@media (max-width: 1255px) {
+    body {
+        width: 90%;
+    }
+    .codeback {
+        width: 100%;
+        padding: 3px 5px 0;
+    }
+    .header-photo img {
+        padding: 30px 50px;
+    }
+}
+@media (max-width: 1040px) {
+    body {
+        width: 100%;
+    }
+}
+@media (max-width: 900px) {
+    .header-photo img {
+        padding: 0;
+    }
+    main {
+        flex-wrap: wrap;
+    }
+    nav.links ul {
+        flex-direction: column;
+    }
+    nav.links li {
+        padding: 10px;
+    }
+    section {
+        order: 0;
+        width: 100%;
+        border: none;
+    }
+    aside {
+        width: 100%;
+        border: none;
+    }
+}
+@media (max-width: 600px) {
+    body {
+        border: none;
+        box-shadow: none;
+    }    
+    main {
+        font-size: 15px;
+    }
+    .codeback {
+        font-size: 14px;
+        width: min-content;
+    }
+    .exam {
+        width: 300px;
+    }
+}
+@media (max-width: 450px) {
+    .content ul {
+        padding-left: 0;
+    }
+    .codeback {
+        font-size: 10px;
+    }
 }
