--- a/style.css
+++ b/style.css
@@ -89,11 +89,13 @@ section {
     border-left: 1px solid black;
     order: 1;
 }
-section img {
-    width: 200px;
-}
 .exam {
-    width: 420px;
+    width: 265px;
+    border-radius: 20px;
+}
+.exam:hover {
+    transform: scale(1.2);
+    transition: 0.3s;
 }
 .codeback {
     background: dimgray;
@@ -121,9 +123,19 @@ aside {
     font-size: 18px;
     line-height: 1.5;
     margin: 0;
+    display: flex;
+    flex-wrap: wrap;
 }
 .content a {
     text-decoration: none;
+}
+.figma {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.figma p:last-child {
+    margin-left: 40px;
 }
 footer {
     display: flex;
@@ -165,6 +177,21 @@ footer {
     }
     .header-photo img {
         padding: 30px 50px;
+    }
+}
+@media (min-width: 1041px) and (max-width: 1105px) {
+    .figma p:last-child {
+        margin-left: 0;
+    }
+}
+@media (min-width: 901px) and (max-width: 996px) {
+    .figma p:last-child {
+        margin-left: 0;
+    }
+}
+@media (max-width: 676px) {
+    .figma p:last-child {
+        margin-left: 0;
     }
 }
 @media (max-width: 1040px) {
@@ -209,6 +236,7 @@ footer {
     }
     .exam {
         width: 300px;
+        max-width: 100%;
     }
 }
 @media (max-width: 450px) {
